# for display continuity sake please use 2 spaces instead of tabs

2013-03-07 mmichaud <michael.michaud@free.fr>
  * R_G_B attribute is now excluded from ColourTheming attribute candidates

2013-03-01 mmichaud <michael.michaud@free.fr>
  * fix a problem with shapefilewriter and the use of 
    overrideWithExistingCompatibleDbfFieldDef(patch from Larry Becker)

2013-02-24 mmichaud <michael.michaud@free.fr>
  * fix 1447907 : upgrade jdom.jar (1.0b8) to jdom-1.1.3.jar
  * fix 1472782 : date is now shown with time in attribute table. It is 
    persisted as timestamp in postgis database and jml files, but time is lost
    in shapefiles.

2013-02-20 mmichaud <michael.michaud@free.fr>
  * Add TextBasesVertexStyle.java2xml to be able to save text based
    decoration styles in a project

2013-02-17 mmichaud <michael.michaud@free.fr>
  * FR 3601072 : Replace aggregation-0.2.5 by 0.2.6 in PLUS distribution
  * Include CoverageCleanerPlugIn in Topology extension

2013-02-14 mmichaud <michael.michaud@free.fr>
  * Fixed a problem with TEXT attribute in ExtractLayerByAttributePlugIn

2013-01-29 mmichaud <michael.michaud@free.fr>
  * Prevent flickering of AboutDialog the first time it is opened.
  
2013-01-20 mmichaud <michael.michaud@free.fr>
  * Fix bug 3600776 : regression in LabelStyle (caused by jts update to 1.13)

2013-01-20 mmichaud <michael.michaud@free.fr>
  * Fixed a memory leak in WKTPlugIn (geometry text representation was retained) 
  * Improve UndoableCommand so that one can deactivate commands related to a
    specific layer when the layer no more exists.
  * Resources used by a UndoableCommand can be removed if the UndoableCommand
    is related to a Layer which does not exist anymore (fix another memory leak) 
  
2013-01-19 mmichaud <michael.michaud@free.fr>
  * Fixed a severe bug in EditAttributeByFormulaPlugIn + I18N improvement
  
2013-01-15 mmichaud <michael.michaud@free.fr>
  * Avoid NPE in the case a WMS Layer has no Title
