@@ -1,5 +1,11 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-03-09 mmichaud <michael.michaud@free.fr>
+  * add createExactlyOneSelectedLayerMustBeEditableCheck in DuplicateItemPlugIn
+    to avoid a NPE (no layer selected) and make sure the user knows where 
+    items will be copied.
+  * PasteItemPlugIn : replace current selection by newly copied features
+
 2013-03-07 mmichaud <michael.michaud@free.fr>
   * R_G_B attribute is now excluded from ColourTheming attribute candidates
 
